Fix scrollbar issue

--- a/public/text/stylesheets/base.css
+++ b/public/text/stylesheets/base.css
@@ -29,14 +29,15 @@ body {
   background: rgba(255, 255, 255, .9);
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(25%, rgba(2555, 2555, 255, .95)), to(#fff));
   bottom: 0;
-  padding: 12px 0 0 0;
+  left: 0;
   position: fixed;
-  width: 100%;
+  right: 0;
   z-index: 99999;
 }
 
 #footer p {
   line-height: 48px;
+  padding: 12px 0 0 0;
   text-align: center;
 }
 
